--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -12,11 +12,11 @@
     <form class="form">
       <label>
         First delay (ms)
-        <input type="number" name="delay" required />
+        <input type="number" name="delay" step="1000" required />
       </label>
       <label>
         Delay step (ms)
-        <input type="number" name="step" required />
+        <input type="number" name="step" step="100" required />
       </label>
       <label>
         Amount
