--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -25,6 +25,7 @@
       <button type="submit">Create promises</button>
     </form>
 
+    <script src="dist/notiflix-aio-3.2.5.min.js"></script>
     <script src="js/03-promises.js" type="module"></script>
   </body>
 </html>
